avatar fix on ios

--- a/src/sass/components/avatar/_avatar.scss
+++ b/src/sass/components/avatar/_avatar.scss
@@ -51,6 +51,7 @@
     object-fit: cover;
     line-height: 0;
     box-sizing: border-box;
+    border-radius: 50%;
   }
 
   > p {
